ref: error handling
error처리
